inclusao do readme

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <input id="email" type="email">
 
         <label for="telefone">Telefone:</label>
-        <input id="telefone" type="number">
+        <input id="telefone" type="text">
 
 
         <button id="botaoEnviar">Enviar</button>
